2013-11-20  Peter Stephenson  <p.stephenson@samsung.com>

	* 32030: revert 31995 as it caused (N) to fail on an empty
	failed glob.  Add test for this case.

2013-11-19  Barton E. Schaefer  <schaefer@zsh.org>

	* 32023: Src/utils.c: better interrupt handling at RM_STAR_WAIT

2013-11-18  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted but see 32012: Doc/help/.cvsignore,
	Doc/help/.distfiles: were created in the wrong place, so move.

2013-11-18  Barton E. Schaefer  <schaefer@zsh.org>

	* 32008: Martin Vaeth: Completion/Zsh/Command/.distfiles
	Completion/Zsh/Command/_run-help Doc/Makefile.in: follow-up to
	31988 - complete "." and ":" for run-help, distribute _run-help,
	clean up better during make

	* 31995: Han Pingtian: Src/glob.c: glob	qualifiers cannot
	follow an empty pattern, so a leading paren means grouping

2013-11-17  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 32001: Src/subst.c: fix crash on empty arrays with array
	intersection and disjunction.

2013-11-15  Barton E. Schaefer  <schaefer@zsh.org>

	* Martin Vaeth: 31988: Doc/Makefile.in, Util/helpfiles: remove
	LC_CTYPE heuristics, assure clean environment, force LANG=C

2013-11-14  Peter Stephenson  <p.stephenson@samsung.com>

	* Jun T.: 31984: Completion/Unix/Command/_df: new completion.

	* 31983: Src/zsh.mdd: suppress warning from cmp that doesn't
	indicate a problem when generating patchlevel header.

	* 31982: Src/math.c, Test/C01arith.ztst: detection of floating
	point constants had run rampant in users/17445.  Fix the original
	problem another way.

2013-11-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 31977: Src/module.c: no error if autoloading a feature that
	is already loaded in a consistent fashion.

	* Jun T.: 31971: locale fix for helpfiles.

	* Martin Vaeth: 31959: .gitignore, Doc/help/.cvsignore,
	Doc/help/.distfiles: missed files.

2013-11-12  Bart Schaefer  <schaefer@zsh.org>

	* 31966: Util/helpfiles: skip introductory paragraphs processing