@@ -1,6 +1,6 @@
 #compdef run-help
 local d expl
-local HELPDIR=${HELPDIR:-/usr/share/zsh/$ZSH_VERSION/help}
+local HELPDIR=${HELPDIR:-@runhelpdir@}
 [[ -d $HELPDIR ]] && {
 	d=($HELPDIR/*(:t))
 	(($#d)) && d+=('.' ':') && _wanted commands expl 'command' compadd -a d
